kubernetes/apps/immich/app/deployment/httproute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-buffering
  namespace: immich
spec:
  buffering:
    maxRequestBodyBytes: 0

---


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-httproute
  namespace: immich
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "photos.cloud.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: immich-buffering
    backendRefs:
    - name: immich-server
      port: 2283

---
